Added text, img and video.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<meta charset="UTF-8">
+<title>Bartosz Piech</title>
 </head>
-<body>
+<body style="background-color:grey;">
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<h1>Witaj!</h1>
+<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.</p>
+Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej<br>
+<img src="JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
+<br>Którędy na żeroma<br>
+<video src="TomekThug.mp4" width="250" controls><p>Twoja przeglądarka nie obsługuje wideo w HTML5. Tutaj <a href="TomekThug.mp4"> link do wideo</a> :)</video>
 </body>
 </html>
