--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <h1>Witaj!</h1>
 <p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.</p>
 Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej<br>
-<img src="/images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
+<img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
 <br>Którędy na żeroma<br>
-<video src="/images/TomekThug.mp4" width="250" controls><p>Twoja przeglądarka nie obsługuje wideo w HTML5. Tutaj <a href="TomekThug.mp4"> link do wideo</a> :)</video>
+<video src="https://bartoszpiech.github.io//images/TomekThug.mp4" width="250" controls><p>Twoja przeglądarka nie obsługuje wideo w HTML5. Tutaj <a href="TomekThug.mp4"> link do wideo</a> :)</video>
 </body>
 </html>
