--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Bartosz Piech</title>
+<title>💀 Bartosz Piech</title>
 </head>
 <body style="background-color:grey;">
 
