--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="icon" href="https://bartoszpiech.github.io//images/ra_ico.png"/>
 <title>Bartosz Piech</title>
 </head>
 <body style="background-color:grey;">
