--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="icon" href="https://bartoszpiech.github.io//images/ra_ico.png"/>
+  <link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/ra_ico.png">
 <title>Bartosz Piech</title>
 </head>
 <body style="background-color:grey;">
