--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
 <title>Bartosz Piech</title>
 </head>
 <body style="background-color:grey;">
