--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
 <title>Bartosz Piech</title>
 </head>
-<body style="background-color:grey;">
+<body style="background-color:grey;" style="font-family:verdana;">
 
 <h1>Witaj!</h1>
 <p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.</p>
