--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
 <title>Bartosz Piech</title>
 </head>
-<body style="background-color:grey;" style="font-family:verdana;">
+<body style="background-color:rgb(210);font-family:verdana;">
 
-<h1>Witaj!</h1>
-<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.</p>
-Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej<br>
+<h1 style="text-align:center;color:rgb(100, 25, 160);">Witaj!</h1>
+<p style="text-align:center;color:rgb(100, 25, 160);">Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej</p><br>
 <img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="250">
 <img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
 <video src="https://bartoszpiech.github.io//images/TomekThug.mp4" width="250" controls><p>Twoja przeglądarka nie obsługuje wideo w HTML5. Tutaj <a href="TomekThug.mp4"> link do wideo</a> :)</video>
