--- a/index.html
+++ b/index.html
@@ -8,11 +8,35 @@
 <body style="background-color:rgb(210,210,210);font-family:verdana;">
 
 <h1 style="text-align:center;color:rgb(100, 25, 160);">Witaj!</h1>
+  <p>Click the button to get your coordinates.</p>
+
+<button onclick="getLocation()">Try It</button>
+
+<p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+  x.innerHTML = "Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude;
+}
+</script>
+
 <p style="text-align:center;color:rgb(100, 25, 160);">Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.
 Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej</p><br>
 <img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="250">
-<video src="https://bartoszpiech.github.io//images/TomekThug.mp4" width="250" controls><p>Twoja przeglądarka nie obsługuje wideo w HTML5. Tutaj <a href="TomekThug.mp4"> link do wideo</a> :)</video>
 <img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
+<video src="https://bartoszpiech.github.io//images/TomekThug.mp4" width="250" controls><p>Twoja przeglądarka nie obsługuje wideo w HTML5. Tutaj <a href="TomekThug.mp4"> link do wideo</a> :)</video>
+
 
 </body>
 </html>
