--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej</p><br>
 <img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
 <br><p style="text-align:center;color:rgb(100, 25, 160);">Siema, tu bedzie czat i elo!</p>
 i siema
+i jou
 
 
 </body>
