--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej</p><br>
 <br><p style="text-align:center;color:rgb(100, 25, 160);">Siema, tu bedzie czat i elo!</p>
 i siema
 i jou
+lol
 
 
 </body>
