Added image of my brother.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej</p><br>
 <img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="250">
 <img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
+<img src="https://bartoszpiech.github.io//images/Oski.jpg" alt="Moj brat Oski" width="250" height="300">
 <br><p style="text-align:center;color:rgb(100, 25, 160);">Siema, tu bedzie czat i elo!</p>
 
 
