--- a/index.html
+++ b/index.html
@@ -4,18 +4,119 @@
 <meta charset="UTF-8">
 <link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
 <title>Bartosz Piech</title>
+<meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
+<meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
+
+<style>
+#container{
+width: 1000px;
+margin-left: auto;
+margin-right: auto;
+font-family:verdana;
+}
+#logo{
+background-color:rgb(210,210,210);
+text-align:center;
+color:rgb(100, 25, 160);
+padding: 15px;
+}
+#nav{
+float:left;
+background-color: lavender;
+width: 120px;
+height: 1000px;
+padding: 10px;
+}
+#content{
+float: left;
+background-color: lavender;
+text-align:center;
+color:rgb(100, 25, 160);
+padding: 20px;
+width: 640px;
+height: 980px;
+}
+#ad{
+float: left;
+background-color: lavender;
+width: 160px;
+padding: 10px;
+height: 1000px;
+}
+#footer{
+	clear: both;
+	background-color: black;
+	color: white;
+	text-align: center;
+	padding: 10px;
+}
+</style>
 </head>
-<body style="background-color:rgb(210,210,210);font-family:verdana;">
+<body>
+	<div id="container">
+		<div id="logo">
+			<h1>Witaj!</h1>
+		</div>
 
-<h1 style="text-align:center;color:rgb(100, 25, 160);">Witaj!</h1>
+		<div id="nav">
+			cos <br/>
+			cos <br/>
+			cos <br/>
+			cos <br/>
+			cos <br/>
+			cos <br/>
+		</div>
+		<div id="content">
+			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej
+				Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
+				
+			</p>
+		</div>
+		<div id="ad">
+				<img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="160">
+				<img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="160">
+				<img src="https://bartoszpiech.github.io//images/Oski.jpg" alt="Moj brat Oski" width="160">
+		</div>
+		<div id="footer">
+			Site made by: Bartosz Piech &copy;
 
-<p style="text-align:center;color:rgb(100, 25, 160);">Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej</p><br>
-<img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="250">
-<img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250" height="300">
-<img src="https://bartoszpiech.github.io//images/Oski.jpg" alt="Moj brat Oski" width="250" height="300">
-<br><p style="text-align:center;color:rgb(100, 25, 160);">Siema, tu bedzie czat i elo!</p>
+		</div>
 
+	</div>
 
 </body>
 </html>
