--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ width: 1000px;
 margin-left: auto;
 margin-right: auto;
 font-family:verdana;
+background-color:rgb(210,210,210);
 }
 #logo{
 background-color:rgb(210,210,210);
@@ -59,51 +60,16 @@ height: 1000px;
 		</div>
 
 		<div id="nav">
-			cos <br/>
-			cos <br/>
+			Strona Glowna<br/>
+			Galeria <br/>
 			cos <br/>
 			cos <br/>
 			cos <br/>
 			cos <br/>
 		</div>
 		<div id="content">
-			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej
-				Nazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				Jestem Studentem I roku na kierunku AiR na Politechnice WrocławskiejNazywam się Bartosz Piech, znajdujesz się na mojej stronie.
-				
+			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej.
+
 			</p>
 		</div>
 		<div id="ad">
