--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@ height: 1000px;
 			cos <br/>
 		</div>
 		<div id="content">
-			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej.
-
+			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek dupa
 			</p>
 		</div>
 		<div id="ad">
