--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ height: 1000px;
 	<div id="container">
 		<div id="logo">
 			<h1>Witaj!</h1>
+			<img src="https://bartoszpiech.github.io//images/ce.png" alt="Logo" width="100">
 		</div>
 
 		<div id="nav">
