--- a/index.html
+++ b/index.html
@@ -56,19 +56,15 @@ height: 1000px;
 <body>
 	<div id="container">
 		<div id="logo">
-			<img src="https://bartoszpiech.github.io//images/ce.png" alt="Logo" width="200">
+			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Logo" width="200"></a>
 		</div>
 
 		<div id="nav">
-			Strona Glowna<br/>
-			Galeria <br/>
-			cos <br/>
-			cos <br/>
-			cos <br/>
-			cos <br/>
+			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
+			<a href="http://bartoszpiech.github.io/gallery/">Galeria </a><br/>
 		</div>
 		<div id="content">
-			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek dupa
+			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
 			</p>
 		</div>
 		<div id="ad">
