--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ height: 1000px;
 
 		<div id="nav">
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
-			<a href="http://bartoszpiech.github.io/gallery/">Galeria </a><br/>
+			<a href="http://bartoszpiech.github.io/galeria/">Galeria </a><br/>
 		</div>
 		<div id="content">
 			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
