--- a/galeria.html
+++ b/galeria.html
@@ -8,7 +8,9 @@
 	<meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
 	</head>
 	<body>
-		siema
+		<img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="160">
+		<img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="160">
+		<img src="https://bartoszpiech.github.io//images/Oski.jpg" alt="Moj brat Oski" width="160">
 	</body>
 
 
