--- a/index.html
+++ b/index.html
@@ -56,21 +56,18 @@ height: 1000px;
 <body>
 	<div id="container">
 		<div id="logo">
-			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Logo" width="200"></a>
+			<img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300">
 		</div>
-
 		<div id="nav">
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
-			<a href="http://bartoszpiech.github.io/galeria/">Galeria </a><br/>
+			<a href="http://bartoszpiech.github.io/galeria.html/">Galeria </a><br/>
 		</div>
 		<div id="content">
 			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
 			</p>
 		</div>
 		<div id="ad">
-				<img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="160">
-				<img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="160">
-				<img src="https://bartoszpiech.github.io//images/Oski.jpg" alt="Moj brat Oski" width="160">
+			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Logo" width="200"></a>
 		</div>
 		<div id="footer">
 			Site made by: Bartosz Piech &copy;
