--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
 <title>Bartosz Piech</title>
 <meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
 <meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
-
 <style>
 #container{
-width: 1000px;
+width: 1500px;
 margin-left: auto;
 margin-right: auto;
 font-family:verdana;
-background-color:rgb(210,210,210);
 }
 #logo{
-background-color:rgb(210,210,210);
+background-color: black
 text-align:center;
 color:rgb(100, 25, 160);
 padding: 15px;
@@ -24,7 +22,7 @@ padding: 15px;
 #nav{
 float:left;
 background-color: lavender;
-width: 120px;
+width: 200px;
 height: 1000px;
 padding: 10px;
 }
@@ -34,13 +32,13 @@ background-color: lavender;
 text-align:center;
 color:rgb(100, 25, 160);
 padding: 20px;
-width: 640px;
+width: 1020px;
 height: 980px;
 }
 #ad{
 float: left;
 background-color: lavender;
-width: 160px;
+width: 200px;
 padding: 10px;
 height: 1000px;
 }
