--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@ width: 1500px;
 margin-left: auto;
 margin-right: auto;
 font-family:verdana;
+background-color:grey;
 }
 #logo{
-background-color: black
+background-color: black;
 text-align:center;
 color:rgb(100, 25, 160);
 padding: 15px;
@@ -28,7 +29,7 @@ padding: 10px;
 }
 #content{
 float: left;
-background-color: lavender;
+background-color: black;
 text-align:center;
 color:rgb(100, 25, 160);
 padding: 20px;
@@ -58,7 +59,7 @@ height: 1000px;
 		</div>
 		<div id="nav">
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
-			<a href="http://bartoszpiech.github.io/galeria.html/">Galeria </a><br/>
+			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
 		</div>
 		<div id="content">
 			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
