--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
 <meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
 <style>
+background-color:grey;
 #container{
 width: 1500px;
 margin-left: auto;
@@ -22,7 +23,7 @@ padding: 15px;
 }
 #nav{
 float:left;
-background-color: lavender;
+background-color: grey;
 width: 200px;
 height: 1000px;
 padding: 10px;
@@ -38,7 +39,7 @@ height: 980px;
 }
 #ad{
 float: left;
-background-color: lavender;
+background-color: grey;
 width: 200px;
 padding: 10px;
 height: 1000px;
