--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
 <meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
 <style>
-background-color:grey;
 #container{
 width: 1500px;
 margin-left: auto;
@@ -53,7 +52,7 @@ height: 1000px;
 }
 </style>
 </head>
-<body>
+<body bgcolor="black">
 	<div id="container">
 		<div id="logo">
 			<img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300">
