--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ background-color: grey;
 width: 200px;
 height: 1000px;
 padding: 10px;
+border-top-left-radius: 20px;
 }
 #content{
 float: left;
@@ -42,6 +43,7 @@ background-color: grey;
 width: 200px;
 padding: 10px;
 height: 1000px;
+border-top-right-radius: 20px;
 }
 #footer{
 	clear: both;
