--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ border-top-left-radius: 20px;
 float: left;
 background-color: black;
 text-align:center;
-color:rgb(100, 25, 160);
+color:#dedede
 padding: 20px;
 width: 1020px;
 height: 980px;
