--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ padding: 15px;
 float:left;
 background-color: grey;
 width: 200px;
-height: 1000px;
 padding: 10px;
 border-top-left-radius: 20px;
 }
@@ -32,17 +31,15 @@ border-top-left-radius: 20px;
 float: left;
 background-color: black;
 text-align:center;
-color:#dedede
+color:#dedede;
 padding: 20px;
 width: 1020px;
-height: 980px;
 }
 #ad{
 float: left;
 background-color: grey;
 width: 200px;
 padding: 10px;
-height: 1000px;
 border-top-right-radius: 20px;
 }
 #footer{
