--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
 <style>
 #container{
-width: 1500px;
+width: 1640px;
 margin-left: auto;
 margin-right: auto;
 font-family:verdana;
@@ -17,12 +17,11 @@ background-color:grey;
 #logo{
 background-color: black;
 text-align:center;
-color:rgb(100, 25, 160);
-padding: 15px;
+padding: 10px;
 }
 #nav{
 float:left;
-background-color: grey;
+background-color: darkgrey;
 width: 200px;
 padding: 10px;
 }
@@ -32,11 +31,11 @@ background-color: black;
 text-align:center;
 color:#dedede;
 padding: 200px;
-width: 10px;
+width: 800px;
 }
 #ad{
 float: left;
-background-color: grey;
+background-color: darkgrey;
 width: 200px;
 padding: 10px;
 }
