--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ padding: 10px;
 }
 #nav{
 float:left;
-background-color: darkgrey;
+background-color: black;
 width: 200px;
 padding: 10px;
 }
@@ -34,7 +34,7 @@ width: 800px;
 }
 #ad{
 float: left;
-background-color: darkgrey;
+background-color: black;
 width: 200px;
 padding: 10px;
 }
