--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Maecenas lobortis et erat ac malesuada. Nam dictum nec dolor ac malesuada. Nulla
 			</p>
 		</div>
 		<div id="ad">
-			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Logo" width="200"></a>
+			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Centrum Eurokontakt" width="200"></a>
 		</div>
 		<div id="footer">
 			Site made by: Bartosz Piech &copy;
