--- a/galeria.html
+++ b/galeria.html
@@ -5,18 +5,70 @@
 	<link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
 	<title>Bartosz Piech</title>
 	<meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
+
 	<meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
+	<style>
+#container{
+width: 1440px;
+margin-left: auto;
+margin-right: auto;
+font-family:verdana;
+}
+#logo{
+background-color: black;
+text-align:center;
+padding: 10px;
+}
+#nav{
+float:left;
+background-color: black;
+width: 200px;
+padding: 10px;
+}
+#content{
+float: left;
+background-color: black;
+text-align:center;
+color:#dedede;
+padding: 100px;
+width: 800px;
+}
+#ad{
+float: left;
+background-color: black;
+width: 200px;
+padding: 10px;
+}
+#footer{
+clear: both;
+background-color: black;
+color: white;
+text-align: center;
+padding: 10px;
+}
+</style>
 	</head>
-	<body>
-		<img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="160">
-		<img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="160">
-		<img src="https://bartoszpiech.github.io//images/Oski.jpg" alt="Moj brat Oski" width="160">
-	</body>
 
-
-
-
-
-
-
+<body bgcolor="black">
+	<div id="container">
+		<div id="logo">
+			<img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300">
+		</div>
+		<div id="nav">
+			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
+			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
+		</div>
+		<div id="content">
+			<img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="250">
+		<img src="https://bartoszpiech.github.io//images/JaiKuba.png" alt="Ja i mój przyjaciel Kuba" width="250">
+<img src="https://bartoszpiech.github.io//images/Oski.jpg" alt="Moj brat Oski" width="250">
+		</div>
+		<div id="ad">
+			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Centrum Eurokontakt" width="200"></a>
+		</div>
+		<div id="footer">
+			Site made by: Bartosz Piech &copy; Email me @piech.bartosz696@gmail.com
+		</div>
+	</div>
+</body>
 </html>
