--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ float:left;
 background-color: black;
 width: 200px;
 padding: 10px;
+font-size: large;
+color:#dedede;
 }
 #content{
 float: left;
@@ -39,18 +41,18 @@ width: 200px;
 padding: 10px;
 }
 #footer{
-	clear: both;
-	background-color: black;
-	color: white;
-	text-align: center;
-	padding: 10px;
+clear: both;
+background-color: black;
+color: white;
+text-align: center;
+padding: 10px;
 }
 </style>
 </head>
 <body bgcolor="black">
 	<div id="container">
 		<div id="logo">
-			<img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300">
+			<a href="http://bartoszpiech.github.io/"><img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300"></a>
 		</div>
 		<div id="nav">
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
