--- a/galeria.html
+++ b/galeria.html
@@ -22,6 +22,8 @@ padding: 10px;
 #nav{
 float:left;
 background-color: black;
+font-size: large;
+color:#dedede;
 width: 200px;
 padding: 10px;
 }
@@ -52,7 +54,7 @@ padding: 10px;
 <body bgcolor="black">
 	<div id="container">
 		<div id="logo">
-			<img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300">
+			<a href="http://bartoszpiech.github.io/"><img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300"></a>
 		</div>
 		<div id="nav">
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
