--- a/galeria.html
+++ b/galeria.html
@@ -7,49 +7,7 @@
 	<meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
 
 	<meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
-	<style>
-#container{
-width: 1440px;
-margin-left: auto;
-margin-right: auto;
-font-family:verdana;
-}
-#logo{
-background-color: black;
-text-align:center;
-padding: 10px;
-}
-#nav{
-float:left;
-background-color: black;
-font-size: large;
-color:#dedede;
-width: 200px;
-padding: 10px;
-text-decoration: none;
-}
-#content{
-float: left;
-background-color: black;
-text-align:center;
-color:#dedede;
-padding: 100px;
-width: 800px;
-}
-#ad{
-float: left;
-background-color: black;
-width: 200px;
-padding: 10px;
-}
-#footer{
-clear: both;
-background-color: black;
-color: white;
-text-align: center;
-padding: 10px;
-}
-</style>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 
 <body bgcolor="black">
