updated nav tab

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<div id="nav">
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
+			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
 		</div>
 		<div id="content">
 			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
@@ -34,8 +35,7 @@ Maecenas lobortis et erat ac malesuada. Nam dictum nec dolor ac malesuada. Nulla
 			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Centrum Eurokontakt" width="200"></a>
 		</div>
 		<div id="footer">
-			Site made by: Bartosz Piech &copy;
-
+			Site made by: Bartosz Piech &copy; Email me @piech.bartosz696@gmail.com
 		</div>
 
 	</div>
