--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Maecenas lobortis et erat ac malesuada. Nam dictum nec dolor ac malesuada. Nulla
 		</div>
 		<div id="ad">
 			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Centrum Eurokontakt" width="200"></a>
+			I ty mozesz w tym miejscu umiescic swoja reklame, tylko 5zl/miesiac :))))
 		</div>
 		<div id="footer">
 			Site made by: Bartosz Piech &copy; Email me @piech.bartosz696@gmail.com
