--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
 		</div>
 		<div id="content">
+			<h1>Witaj</h1>
 			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus ex ultrices, vehicula turpis et, condimentum felis. Etiam interdum varius blandit. Praesent pretium a magna vel ultrices. Nunc id tristique est, quis ornare felis. Phasellus nec nisi massa. Donec posuere lacus ac mi molestie, at vulputate augue pretium. Cras rutrum quam eu pellentesque ornare.
 
@@ -32,8 +33,9 @@ Maecenas lobortis et erat ac malesuada. Nam dictum nec dolor ac malesuada. Nulla
 			</p>
 		</div>
 		<div id="ad">
+			<p>Fajne reklamy</p>
 			<a href="http://www.eurokontakt.net.pl/"><img src="https://bartoszpiech.github.io//images/ce.png" alt="Centrum Eurokontakt" width="200"></a>
-			I ty mozesz w tym miejscu umiescic swoja reklame, tylko 5zl/miesiac :))))
+			<p>I ty mozesz w tym miejscu umiescic swoja reklame, tylko 5zl/miesiac :))))</p>
 		</div>
 		<div id="footer">
 			Site made by: Bartosz Piech &copy; Email me @piech.bartosz696@gmail.com
