--- a/index.html
+++ b/index.html
@@ -20,15 +20,7 @@
 		</div>
 		<div id="content">
 			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus ex ultrices, vehicula turpis et, condimentum felis. Etiam interdum varius blandit. Praesent pretium a magna vel ultrices. Nunc id tristique est, quis ornare felis. Phasellus nec nisi massa. Donec posuere lacus ac mi molestie, at vulputate augue pretium. Cras rutrum quam eu pellentesque ornare.
-
-Phasellus accumsan aliquam lacus sed faucibus. Nulla in tortor lorem. Etiam sollicitudin risus nec augue congue, nec finibus ante ornare. Etiam massa velit, rutrum eget nibh vel, mattis elementum ante. Cras venenatis lectus in purus elementum, sed rhoncus metus molestie. In pretium tempor dui ut rhoncus. Suspendisse potenti. Mauris ornare condimentum erat sed venenatis. Morbi maximus molestie molestie. Duis blandit, ex sed hendrerit tristique, risus nisi consectetur quam, quis facilisis purus nibh ut odio.
-
-Aenean ut lacus rhoncus, maximus nisi ac, convallis sem. Ut placerat nisl vitae dui lacinia tempor. Pellentesque id porta sapien. Aliquam massa est, pretium a est eu, dictum aliquet elit. Duis ultrices nulla varius mi accumsan, vitae pharetra sem lobortis. Fusce quis mattis tortor. Vestibulum nulla sem, consectetur nec magna eget, pretium dignissim velit. Ut vel porttitor nibh. Nullam ultrices ante eget augue ultricies, interdum ultrices dui rhoncus. Curabitur a bibendum mi, a efficitur est. Aenean pulvinar orci sollicitudin sem tristique, non semper augue tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer eget urna interdum, eleifend erat tempus, posuere nisi. Praesent dignissim convallis arcu, ut tincidunt magna venenatis non.
-
-Curabitur fermentum dignissim erat, et maximus velit pretium sit amet. Curabitur ullamcorper condimentum volutpat. Phasellus molestie orci non justo placerat tincidunt. Aliquam erat volutpat. Etiam vel metus pulvinar, malesuada est a, faucibus leo. Quisque fringilla gravida lorem eget varius. Nunc mattis tempor mauris nec porta. Donec eu tempor massa. Integer sed nulla vel ante suscipit lobortis. Nunc pellentesque arcu mi, et commodo ligula interdum a. Nulla auctor porta ultricies. Ut accumsan in enim sit amet cursus.
-
-Maecenas lobortis et erat ac malesuada. Nam dictum nec dolor ac malesuada. Nulla est risus, volutpat et nisl vel, condimentum iaculis tellus. Nullam dapibus dictum odio, nec mattis risus efficitur id. Nulla tincidunt eu quam vel feugiat. Donec quis convallis quam, at luctus nisl. Aenean velit tortor, tincidunt vel urna vitae, maximus ullamcorper orci. Suspendisse tortor sem, vulputate non sem a, rutrum suscipit tortor. Nam ut facilisis magna. Aenean pellentesque, leo euismod vestibulum mattis, odio sem imperdiet justo, et pulvinar lectus lorem at ligula. Integer at congue odio.
+			<a href="http://sync-video.com/r/r0MtwJHl">Youtube room ;)</a>
 			</p>
 		</div>
 		<div id="ad">
