--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 	<script type="text/javascript">
 
+		function odliczanie()
+		{
 		var dzisiaj = new Date();
 
 		var dzien = dzisiaj.getDate();
@@ -18,25 +20,22 @@
 		var godzina = dzisiaj.getHours();
 		var minuta = dzisiaj.getMinutes();
 		var sekunda = dzisiaj.getSeconds();
-
+		document.getElementById("zegar").innerHTML = dzien+"/"+miesiac+"/"+rok+" | "+godzina+":"+minuta+":"+sekunda;
+		setTimeout("odliczanie()",1000);
+		}
 	</script>
 
 </head>
 
 
-<body bgcolor="black">
+<body bgcolor="black" onload="odliczanie();">
 	<div id="container">
 		<div id="logo">
 			<a href="http://bartoszpiech.github.io/"><img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300"></a>
 		</div>
 		<div id="nav">
-			<div id="zegar">
-
-			</div>
-			<script type="text/javascript">
-				document.getElementById("zegar").innerHTML = dzien;
-			</script>
-			<a href="http://bartoszpiech.github.io/">Strona Glowna Siema</a><br/>
+			<div id="zegar"></div>
+			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
 			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
 		</div>
