--- a/index.html
+++ b/index.html
@@ -8,25 +8,7 @@
 <meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 
-	<script type="text/javascript">
-
-		function odliczanie()
-		{
-		var dzisiaj = new Date();
-
-		var dzien = dzisiaj.getDate();
-		var miesiac = dzisiaj.getMonth()+1;
-		var rok = dzisiaj.getFullYear();
-		var godzina = dzisiaj.getHours();
-		if(godzina<10) godzina = "0"+godzina;
-		var minuta = dzisiaj.getMinutes();
-		if(minuta<10) minuta= "0"+minuta;
-		var sekunda = dzisiaj.getSeconds();
-		if(sekunda<10) sekunda = "0"+sekunda;
-		document.getElementById("zegar").innerHTML = dzien+"/"+miesiac+"/"+rok+" | "+godzina+":"+minuta+":"+sekunda;
-		setTimeout("odliczanie()",1000);
-		}
-	</script>
+	<script type="text/javascript" src="timer.js"></script>
 
 </head>
 
