--- a/galeria.html
+++ b/galeria.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	<meta charset="UTF-8">
-	<link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
-	<title>Bartosz Piech</title>
-	<meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
+<head>
+<meta charset="UTF-8">
+<link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
+<title>Bartosz Piech</title>
+<meta name="description" content="Prywatna witryna Bartosza Piech, znajdują się tam moje zainteresowania, aktualności i informacje. Zapraszam" />
+<meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
+<link href="style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="timer.js"></script>
+</head>
 
-	<meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-	</head>
 
-<body bgcolor="black">
+<body bgcolor="black" onload="odliczanie();">
 	<div id="container">
 		<div id="logo">
 			<a href="http://bartoszpiech.github.io/"><img src="https://bartoszpiech.github.io//images/logo.png" alt="Logo" width="300"></a>
 		</div>
 		<div id="nav">
+			<div id="zegar"></div>
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
 			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
