--- a/galeria.html
+++ b/galeria.html
@@ -21,6 +21,7 @@
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
 			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
+			<a href="http://bartoszpiech.github.io/kursjs">Kurs JS</a><br/>
 		</div>
 		<div id="content">
 			<img src="https://bartoszpiech.github.io//images/Studniowka.jpg" alt="Ja i moja dziewczyna na jej studniówce" width="250">
