--- a/kursjs.html
+++ b/kursjs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
 <meta charset="UTF-8">
 <link rel="icon" type="image/png" href="https://bartoszpiech.github.io//images/favicon-32x32.png" sizes="32x32" />
@@ -8,6 +8,17 @@
 <meta name="keywords" content="Bartosz Piech, Bartosz, Piech, hobby, programowanie, c, c++ html" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="timer.js"></script>
+	<script type="text/javascript">
+		function sprawdz()
+		{
+			var liczba = document.getElementById("pole").value;
+
+			if (liczba > 0) document.getElementById("wynik").innerHTML="Dodatnia";
+			else if (liczba < 0) document.getElementById("wynik").innerHTML="Ujemna";
+			else if (liczba == 0) document.getElementById("wynik").innerHTML="Zero";
+			else document.getElementById("wynik").innerHTML="To nie jest liczba";
+		}
+	</script>
 </head>
 
 
@@ -20,13 +31,12 @@
 			<div id="zegar"></div>
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
-			<a href="http://bartoszpiech.github.io/kursjs">kurs JS</a><br/>
+			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
 		</div>
 		<div id="content">
-			<h1>Witaj</h1>
-			<p>Nazywam się Bartosz Piech, znajdujesz się na mojej stronie. Jestem Studentem I roku na kierunku AiR na Politechnice Wrocławskiej. Tomek to fajny gosciu.
-			<a href="http://sync-video.com/r/r0MtwJHl">Youtube room ;)</a>
-			</p>
+			<input type="text" id="pole" />
+			<input type="submit" value="Sprawdź" onclick="sprawdz()" />
+			<div id="wynik"></div>
 		</div>
 		<div id="ad">
 			<p>Fajne reklamy</p>
