--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
 		function zmienslajd()
 		{
 			numer++; if (numer > 3) numer=1;
-			var plik = "<img src=\"http://bartoszpiech.github.io/images/galeria/slajd" + numer + ".png\" />";
+			var plik = "<img src=\"http://bartoszpiech.github.io/images/galeria/slajd" + numer + ".png\" width=\"800\" />";
 			document.getElementById("slider").innerHTML = plik;
 			setTimeout("zmienslajd()",5000);
 		}
