--- a/kursjs.html
+++ b/kursjs.html
@@ -34,7 +34,7 @@
 			}
 			else if (liczba1 > -10000000 && liczba2 > -10000000 && liczba1 > liczba2)
 			{
-			for (i = liczba2; i <= liczba1; i++)
+				for (i = liczba1; i >= liczba2; i--)
 			{
 				napis = napis + i + " ";
 			}
