--- a/kursjs.html
+++ b/kursjs.html
@@ -64,11 +64,14 @@
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
 			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
+			<a href="http://bartoszpiech.github.io/kursjs">Kurs JS</a><br/>
 		</div>
 		<div id="content">
+			Program sprawdzający czy podana liczba jest dodatnia, ujemna czy rowna zero.
 			<input type="text" id="pole" />
 			<input type="submit" value="Sprawdź" onclick="sprawdz()" />
 			<div id="wynik"></div>
+			Program wypisujący przedział całkowity podanych dwoch liczb.
 			<input type="text" id="pole1" />
 			<input type="text" id="pole2"/>
 			<input type="submit" value="Pokaż" onclick="wypisz()" />
