--- a/kursjs.html
+++ b/kursjs.html
@@ -67,15 +67,16 @@
 			<a href="http://bartoszpiech.github.io/kursjs">Kurs JS</a><br/>
 		</div>
 		<div id="content">
-			Program sprawdzający czy podana liczba jest dodatnia, ujemna czy rowna zero.
+			Program sprawdzający czy podana liczba jest dodatnia, ujemna czy rowna zero.</br>
 			<input type="text" id="pole" />
 			<input type="submit" value="Sprawdź" onclick="sprawdz()" />
 			<div id="wynik"></div>
-			Program wypisujący przedział całkowity podanych dwoch liczb.
+			Program wypisujący przedział całkowity podanych dwoch liczb.</br>
 			<input type="text" id="pole1" />
 			<input type="text" id="pole2"/>
 			<input type="submit" value="Pokaż" onclick="wypisz()" />
 			<div id="wynik2"></div>
+
 		</div>
 		<div id="ad">
 			<p>Fajne reklamy</p>
