--- a/kursjs.html
+++ b/kursjs.html
@@ -84,7 +84,7 @@
 			<p>I ty mozesz w tym miejscu umiescic swoja reklame, tylko 5zl/miesiac :))))</p>
 		</div>
 		<div id="footer">
-			Site made by: Bartosz Piech &copy; Email me @piech.bartosz696@gmail.com
+			Site made by: Bartosz Piech &copy; Email me @piech.bartosz696@gmail.com&oacute;
 		</div>
 
 	</div>
