--- a/galeria.html
+++ b/galeria.html
@@ -36,6 +36,7 @@
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
 			<a href="http://bartoszpiech.github.io/fajnememy">Fajne memy</a><br/>
 			<a href="http://bartoszpiech.github.io/kursjs">Kurs JS</a><br/>
+			<a href="http://bartoszpiech.github.io/szubienica">Gra wisielec</a><br/>
 		</div>
 		<div id="content">
 			<div id="slider"></div>
