--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<a href="http://bartoszpiech.github.io/">Strona Glowna</a><br/>
 			<a href="http://bartoszpiech.github.io/galeria">Galeria </a><br/>
 			<a href="http://bartoszpiech.github.io/kursjs">kurs JS</a><br/>
+			<a href="http://bartoszpiech.github.io/szubienica">Gra wisielec</a><br/>
 		</div>
 		<div id="content">
 			<h1>Witaj</h1>
