--- a/szubienica.html
+++ b/szubienica.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<title>Szubienica</title>
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700"&subset=latin,latin-ext' rel="stylesheet">
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel="stylesheet" href="style.css_" type="text/css" />
 	<script src="szubienica.js"></script>
 
 	</head>
